# EmbodiedAgentsSys

./: .gitignore  CHANGELOG.rst  PROJECT_COMPLETION_REPORT.md  README.md  TECHNICAL_REPORT.md  TEST_MANUAL.md  conftest.py  demo_fara_webui_v1.0_20250305_AI.py  pyproject.toml  pytest.ini  start_fara_server.sh  test_arm_control.sh  test_fara_integration.py  test_fara_integration_v1.0_20260304_AI.py  test_fara_simple_v1.0_20250305_AI.py  test_fara_simple_v2.0_20250305_AI.py  test_scenarios_standalone.py
agents/: __init__.py  abort.py  cache.py  config.py  config_fara.py  config_vla_plus.py  exceptions.py  simple_agent.py  skills.py
backend/: main.py  requirements.txt
config/: approval_policy.yaml  channels_config.yaml  grounded_sam_config.yaml  llm_config.yaml  real_robot.yaml  safety_limits.yaml  vla_config.yaml  whitelist.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  EmbodiedAgentsSys_代码审查报告.md  EmbodiedAgentsSys_开发计划.md  INTEGRATION_PLAN.md  README.ja.md  README.zh.md  README_DOCS_STRUCTURE.md  USER_GUIDE.md  WEEK1_GREEN_PHASE_SUMMARY.md  WEEK1_RED_PHASE_SUMMARY.md  WEEK7_REFACTOR_SUMMARY.md  conf.py  installation.md  intro.md  technical_analysis_vla_comparison_v1.0_20260303_AI.md  vla_manual_v1.0_20260302_AI.md
embodiedagentsys/: __init__.py
examples/: agent_dashboard_backend.py  demo_local_ollama_v1.0_20260302_AI.py  harness_simple.py  mujoco_arm_control_server.py  robot_command_server.py  robot_viewer.py  simulation_gymnasium.py  simulation_mujoco_basic.py  skills_usage.py  test_ollama_standalone.py  vla_plus_web_demo.py  voice_teaching_agent.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
generated_skills/: exported_skill.py  test_export_test.py
scripts/: rebuild_llama_cpu.sh  rebuild_llama_cuda.sh  run_qwen35_distilled_llama_server.sh  start_dev.sh  test_agent_debugger.sh  test_deepseek.py  test_system.sh  test_vla_plus_manual.py
tests/: attn_residuals_train.py  conftest.py  test_act_adapter.py  test_agent_loop.py  test_arm_adapter.py  (+59 more)
(+580 files in other folders)
